# Humanoid-Robotic

./: .backend_gitignore  .gitignore  BOOK_SETUP_GUIDE.md  Docker-compose.yml  GEMINI.md  OPENAI_AGENTS_SDK_CONVERSION.md  README.md  ROBOTICS_RAG_README.md  RUNNING_APP.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  VERCEL_DEPLOYMENT.md  agent.py  agent_README.md  agent_sdk_docs.md  build_and_serve_prod.bat  config.py  demo_agent.py  err.txt  errors.py  index.html  ingest_full_robotics_content.py  ingest_robotics_content.py  install_dependencies.bat  logging_config.py  models.py  package-lock.json  package.json  requirements.txt  retrieve.py  retriever.py  robotics_qa.py  run_backend_command.md  run_robotics_rag.bat  setup_app.bat  start_both.bat  test_agent.py  test_agent_performance.py  test_agent_sdk.py  test_chatbot.py  (+7 more)
backend/: .gitignore  DB_INSTALLATION.md  Dockerfile  README.md  api.py  app.py  book_content.txt  check_import.py  clear_cache.py  comprehensive_test.py  core_requirements.txt  db_requirements.txt  debug_routes.py  debug_server.py  download_embeddings.py  fetch_complete_qdrant_data.py  fetch_qdrant_data.py  fetch_test_ingestion_complete.py  final_server.py  final_verification.py  ingest_robotics_docs.py  install_dependencies.py  list_models.py  main.py  ml_requirements.txt  pyproject.toml  qdrant_api_changes.py  qdrant_api_guide.py  qdrant_book_ingestion.py  qdrant_compat.py  qdrant_final_fixed_solution.py  qdrant_fixed_solution.py  qdrant_rag_corrected.py  rag_service.py  requirements-dev.txt  requirements.txt  run_app.bat  run_app.sh  run_dev.bat  (+22 more)
(+295 files in other folders)
