[project]
name = "rag-ingestion-pipeline"
version = "0.1.0"
description = "Documentation ingestion pipeline for RAG system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=4.9.0",
    "qdrant-client>=1.8.0",
    "python-dotenv>=1.0.0",
    "transformers>=4.35.0",
    "pytest>=7.4.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"